# prototype

./: .env.example  .gitignore  .npmrc  Dockerfile.dev  LICENSE  PR.md  QUICKSTART.md  README.md  \  biome.json  dev-docker-compose.README.md  dev-docker-compose.yaml  docker-compose.core.yml  docker-compose.databases.yml  docker-compose.socials.yml  docker-entrypoint.sh  evault.docker-compose.yml  index.html  neo4j-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test.html  turbo.json
.claude/: settings.local.json
db/: init-multiple-databases.sh
docker/: Dockerfile.blabsy  Dockerfile.blabsy-w3ds-auth-api  Dockerfile.cerberus  Dockerfile.dev-sandbox  Dockerfile.dreamsync-api  Dockerfile.eVoting  Dockerfile.ereputation  Dockerfile.evault  Dockerfile.evault-core  Dockerfile.evault-prod  Dockerfile.evoting-api  Dockerfile.group-charter-manager  Dockerfile.group-charter-manager-api  Dockerfile.marketplace  Dockerfile.pictique  Dockerfile.pictique-api  Dockerfile.registry  entrypoint.sh
docs/: mapping-rules.md  (+3 more)
services/beeper-connector/: .gitignore  Dockerfile  README 2.md  README.md  UPGRADE.md  beeper-connector-complete.patch  beeper_to_rdf.py  beeper_viz.py  beeper_viz_fix.py  create_test_db.py  package 2.json  package.json  pyproject.toml  requirements 2.txt  tsconfig.build.json  tsconfig.json
services/beeper-connector/src/: BeeperDatabase.ts  BeeperWeb3Adapter.ts  EVaultSync.ts  beeperDbReader.ts  evaultWriter.ts  index.ts  metaStateTransformer.ts  state.ts  types.ts
services/beeper-connector/src/__tests__/: BeeperConnector.test.ts
(+1746 files in other folders)
